remove unnecessary files

--- a/app/Index.html
+++ b/app/Index.html
@@ -3,10 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body>
-    <div class="container">
+    <div>
         <div>
             <p>Directive Test</p>
             <div>
@@ -17,8 +16,6 @@
     </div>
 
     <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/traceur/traceur.js"></script>
     <script>
         traceur.options.experimental = true;
